Time: 12 ms (74.77%), Space: 55.4 MB (35.14%) - LeetHub